--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,6 +1,6 @@
 .loginPage{
-    background: url('C:/Users/Rashmi mendis/Desktop/ReactProjects/employee/public/Images/employeems.jpg');
-    background: linear-gradient(rgba(11, 11, 11, 0.5), rgba(10, 10, 10, 0.5)), url('C:/Users/Rashmi mendis/Desktop/ReactProjects/employee/public/Images/employeems.jpg');
+    background: url('E:\employee-management-system\public\Images\employeems.jpg');
+    background: linear-gradient(rgba(11, 11, 11, 0.5), rgba(10, 10, 10, 0.5)), url('E:\employee-management-system\public\Images\employeems.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 120%;
